objects/Personal_Coach_Meetings__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location of Meeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Summary_trigger__c</fullName>
        <label>Meeting Summary trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_attendance__c</fullName>
        <description>Picklist with YP attendance options</description>
        <inlineHelpText>Please specify whether or not the YP attended the scheduled meeting</inlineHelpText>
        <label>Did the YP attend the meeting?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_date__c</fullName>
        <description>Date field for capturing date of scheduled meeting with YP</description>
        <inlineHelpText>Date of the scheduled meeting with the YP</inlineHelpText>
        <label>Date of meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_number__c</fullName>
        <description>Picklist for capturing which number meeting this is with the YP</description>
        <inlineHelpText>Of the 6 monthly meetings you should have with the YP, which meeting is this?</inlineHelpText>
        <label>Meeting number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_successful__c</fullName>
        <label>Meeting successful?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_summary__c</fullName>
        <description>Long text area for capturing notes of the meeting</description>
        <inlineHelpText>Please provide a summary or outline of the meeting</inlineHelpText>
        <label>Meeting summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_summary_read_by_Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box checked when Champion has read meeting report</description>
        <inlineHelpText>Please tick the box when you have read the meeting report</inlineHelpText>
        <label>Meeting Successful box seen by Champion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Champion_Email__c</fullName>
        <label>PC Champion Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_Coach__c</fullName>
        <formula>Personal_Coaching__r.Coach__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Coach</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Coach_Meetings_Number__c</fullName>
        <formula>HYPERLINK(&apos;TCSPortal_PersonalCoachMeetings?id=&apos;+Id, Name,&apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Coach Meetings Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Coaching__c</fullName>
        <description>Master-detail link to the main Personal Coaching record</description>
        <inlineHelpText>Link to the main Personal Coaching record</inlineHelpText>
        <label>Personal Coaching</label>
        <referenceTo>Personal_Coach__c</referenceTo>
        <relationshipLabel>Personal Coach Meetings</relationshipLabel>
        <relationshipName>Personal_Coach_Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_of_meeting__c</fullName>
        <label>Time of meeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Personal Coach Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Meeting_attendance__c</columns>
        <columns>Meeting_date__c</columns>
        <columns>Personal_Coaching__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCM#{000000}</displayFormat>
        <label>Personal Coach Meetings Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Coach Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Location_Or_Time_of_Meeting_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
ISBLANK(  Meeting_date__c ), 
ISBLANK(  Location__c  ), 
ISBLANK(  Time_of_meeting__c)))</errorConditionFormula>
        <errorMessage>You will not be able to save this record until you have put in the Date, Location and Time of this meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Successful_after_meeting_date</fullName>
        <active>true</active>
        <description>Forces use to populate Meeting Successful? after the date of the meeting has passed.
This was added because users were not doing this.</description>
        <errorConditionFormula>AND(Today() &gt;= Meeting_date__c , NOT(ISPICKVAL (Meeting_successful__c , &quot;No&quot;)),NOT(ISPICKVAL( Meeting_successful__c , &quot;Yes&quot;)))</errorConditionFormula>
        <errorDisplayField>Meeting_successful__c</errorDisplayField>
        <errorMessage>Please select &quot;Yes&quot; or &quot;No&quot; from the &quot;Meeting Successful?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_summary</fullName>
        <active>true</active>
        <description>Require a meeting summary when the YP has attended a meeting</description>
        <errorConditionFormula>AND(ISPICKVAL( Meeting_attendance__c , &quot;Attended&quot;),ISBLANK( Meeting_summary__c ))</errorConditionFormula>
        <errorDisplayField>Meeting_summary__c</errorDisplayField>
        <errorMessage>Please provide a summary/outline of the meeting the YP attended</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Two_days_after_Meet_Summary_not_updated</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Meeting_date__c   &lt;=    TODAY() -  2, ISBLANK( Meeting_summary__c ), OR (NOT( ISCHANGED( Meeting_summary__c ) ) ))</errorConditionFormula>
        <errorMessage>In order to save this record you must update the meeting summary</errorMessage>
    </validationRules>
</CustomObject>